# monopolizer

./: .gitignore  Analysis.ipynb  Cargo.toml  README.md  template.xlsx
.github/workflows/: build-ci.yml  format-ci.yml  lint-ci.yml  web-ci.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/renderer/: board.rs  logs.rs  mod.rs
core/: Cargo.toml
core/src/: appraiser.rs  board.rs  command.rs  serialization.rs  strategy.rs
core/src/places/: chance.rs  community_chest.rs  estate.rs  go_to_jail.rs  income_tax.rs  luxury_tax.rs  mod.rs  nothing.rs  railroad.rs  utilities.rs
doc/: json-structure.md  protocol.md
examples/: board.analyzed.csv  board.json
lib/: Cargo.toml
lib/src/: appraiser.rs  board.rs
lib/src/places/: estate.rs  income_tax.rs
mplz/: Cargo.toml
mplz/src/: main.rs
mplzc/: Cargo.toml
mplzc/src/: main.rs
mplzc/src/renderer/: board.rs  mod.rs
mplzlib/: Cargo.toml
mplzlib/src/: board.rs  command.rs  dice_rolling.rs  lib.rs  player.rs  serialization.rs  strategy.rs
mplzlib/src/places/: community_chest.rs  income_tax.rs  luxury_tax.rs  mod.rs  nothing.rs  railroad.rs  utilities.rs
scripts/: proxy.py
server/: Cargo.toml
server/src/: main.rs
src/: actions.rs  appraiser.rs  board.rs  dice_rolling.rs  events.rs  main.rs  player.rs  serialization.rs  strategy.rs
src/places/: chance.rs  community_chest.rs  estate.rs  go_to_jail.rs  income_tax.rs  luxury_tax.rs  mod.rs  nothing.rs  railroad.rs  utilities.rs
src/renderer/: board.rs  logs.rs  mod.rs
web/: .env  eslint.config.mjs  package-lock.json  package.json
web/src/: App.tsx
(+22 files in other folders)
