[package]
name = "monopolizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
rand = "0.8.5"
regex = "1.7.1"
tui = "0.19.0"
serde_json = "1.0.94"
serde = { version = "1.0.156", features = ["derive"] }
