[package]
name = "mplz-serv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mplz-lib]
path="../lib"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.3.1"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
